# APIKulture

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
data/: apikulture.desktop
scripts/: APIkulture.iss  build-appimage.sh  build-installer.cmd
src/: apikulture.rc  app_state.cpp  app_state.h  clipboard.cpp  clipboard.hpp  clipboard_linux_x11.cpp  collections_io.cpp  collections_io.hpp  environment.cpp  environment.hpp  file_dialog.cpp  file_dialog.hpp  http_client.cpp  http_client.h  main.cpp  openapi_import.cpp  openapi_import.hpp  platform_color_scheme.cpp  platform_color_scheme.h  query_string.cpp  query_string.hpp  response_json_highlighter.cpp  response_json_highlighter.hpp  theme_watcher.cpp  theme_watcher.h  url_import.cpp  url_import.hpp  window_state.cpp  window_state.hpp
ui/: MainWindow.slint
website/: .domains  README.md  index.html  nginx-vhost.conf  robots.txt  sitemap.xml
website/css/: style.css
